Fix display of heading (prevents cutting off)

--- a/_sass/objects/header.scss
+++ b/_sass/objects/header.scss
@@ -34,7 +34,6 @@ header[role="banner"] {
          */
 
         .hN {
-            display: inline;
             font-family: $font-secondary;
             font-size: $h3-font-size;
             line-height: 1.7;
